--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,53 @@
+# Node modules
+node_modules/
+
+# Build output
+dist/
+build/
+
+# Environment files (jangan pernah upload API key)
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Cache
+.vite/
+.cache/
+.temp/
+.tmp/
 .DS_Store
+
+# Editor & system files
+.idea/
+.vscode/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+Thumbs.db
+
+# Optional: test coverage
+coverage/
+
+# Optional: lock files (biar bebas npm/yarn)
+# Uncomment salah satu kalau kamu mau
+# package-lock.json
+# yarn.lock
+
+# GitHub Actions temp files
+*.log
+*.bak
+*.tmp
+
+# Replit / VSCode / JetBrains, etc.
+*.code-workspace
+.replit
